--- a/BikeShop/BikeShop/MainWindow.xaml
+++ b/BikeShop/BikeShop/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BikeShop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" MinWidth="750" MinHeight="400">
+        Title="MainWindow" Height="450" Width="800" MinWidth="750" MinHeight="400"
+        Activated="Window_Activated">
     <Grid>
         <Frame x:Name="MainFrame" Source="/Menu.xaml" />
     </Grid>
